# todo-list

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
todolist/core/migrations/: 0001_create_custom_user.py
todolist/todolist/: settings.py  urls.py
