[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Micaiah Hanke <micaiah.hanke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
django-rest-framework = "^0.1.0"
djangorestframework-jsonapi = "^4.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 79
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
